Done with Blog Website

--- a/EJS Practise/views/compose.ejs
+++ b/EJS Practise/views/compose.ejs
@@ -5,11 +5,11 @@
 <form action="/compose" method="post">
     <div class="form-group">
   <label>Title</label>
-    <input type="text" class="form-control" name="publish" placeholder="Publish" />
+    <input type="text" class="form-control" name="title" placeholder="Publish" />
   
   <!-- <input type="text" name="Post" placeholder="Post" />-->
   <label>Post</label>
-    <textarea name="Text" class="form-control" cols="40" rows="5"></textarea>
+    <textarea name="postBody" class="form-control" cols="30" rows="5"></textarea>
 </div>
 <button type="submit"  name="button" class="btn btn-primary">Publish</button>
 
