--- a/EJS Practise/views/home.ejs
+++ b/EJS Practise/views/home.ejs
@@ -1,6 +1,17 @@
 <%- include('partials/header'); -%>
 <h1>Home</h1>
 
-<p><%= homeStartingContent%></p>
+<p><%= startingContent%></p>
 
-<%- include('partials/footer'); -%>
+ <%  posts.forEach(post=> {%>
+    <h1><%= post.title%></h1>
+    <p><%= post.content.substring(0,100)+ " ...." %>
+        <a href="/posts/<%=post.title%>">Read More</a>
+    </p>
+    
+    <%});%> 
+
+    <!-- <%posts.forEach (post => console.log(post.title));%> -->
+
+   <%- include('partials/footer');-%>
+>
